[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]
#rhai = { version = "1.12.0", features = ["wasm-bindgen"] }

[dependencies]
worker = "0.0.17"
serde = "1.0.188"

[profile.release]
lto = true
strip = true
codegen-units = 1
