[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]
#rhai = { version = "1.12.0", features = ["wasm-bindgen"] }

[dependencies]
worker = { version = "0.0.18", features = ["d1"] }
serde = "1.0.188"
uuid = { version = "1.6.1", features = ["v4","js"] }
pdf = "0.9.0"
md5 = "0.7.0"
[profile.release]
lto = true
strip = true
codegen-units = 1
