[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]


[dependencies]
futures-channel = "0.3.28"
futures-util = { version = "0.3.28", default-features = false }
worker = { version = "0.0.18", features = ["d1"] }
serde = "1.0.188"
md5 = "0.7.0"
serde_json = "1.0.111"
uuid = { version = "1.6.1", features = ["v4","js"] }
base64 = "0.13.1"
[profile.release]
lto = true
strip = true
codegen-units = 1
